--- a/style.css
+++ b/style.css
@@ -1,1 +1,42 @@
-﻿
+﻿li a {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.menu-button1 {
+    position: absolute;
+    width: 138px;
+    height: 31px;
+    left: 370px;
+    top: 79px; 
+    z-index: 1;
+}
+.head {
+    position: absolute;
+    width: 1923px;
+    height: 191.92px;
+    left: -2px;
+    top: 0px;
+    
+    background: #000000;   
+}
+.navpage {
+    position: absolute;
+width: 1923px;
+height: 33.28px;
+left: -2px;
+top: 78px;
+
+background: #811919;
+}
+.logo {
+    position: absolute;
+width: 186px;
+height: 191.92px;
+left: 851px;
+top: 2.08px;
+}
