--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ top: 1114px;
     height: 0px;
     top: 1485px;
     
-    border: 1px solid rgba(0, 0, 0, 0.75);
+    border: 1px solid #A9A9A9;
     transform: matrix(-1, 0, 0, -1, 0, 0);
 }
 .section2_text{
@@ -500,7 +500,7 @@ top: 1114px;
     height: 0px;
     top: 2760px;
     
-    border: 1px solid rgba(0, 0, 0, 0.75);
+    border: 1px solid #A9A9A9;
     transform: matrix(-1, 0, 0, -1, 0, 0);
 }
 .dialux_1{
@@ -508,7 +508,7 @@ top: 1114px;
     width: 541px;
     height: 295px;
     left: 372px;
-    top: 2767px;
+    top: 2800px;
     
     font-family: 'Roboto';
     font-style: normal;
@@ -523,7 +523,7 @@ top: 1114px;
     width: 620px;
     height: 250px;
     left: 932px;
-    top: 2767px;
+    top: 2800px;
     
     font-family: 'Roboto';
     font-style: normal;
@@ -533,4 +533,281 @@ top: 1114px;
     
     color: #000000;
     
+}
+.svodka{
+    position: absolute;
+    width: 1920px;
+    height: 802px;
+    left: 2px;
+    top: 3250px;
+
+    background: #000000;
+}
+.panel_1_head{
+    position: absolute;
+    width: 280px;
+    height: 76px;
+    left: 675px;
+    top: 20px;
+    
+    font-family: 'Marmelad';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    
+    color: #000000;
+}
+.panel_1_img{
+    position: absolute;
+    width: 787px;
+    height: 390px;
+    left: 274px;
+    
+}
+.panel_1{
+    position: absolute;
+    width: 285px;
+    height: 141px;
+    left: 684px;
+    top: 130px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+
+color: #000000;
+}
+.panel_2{
+    position: absolute;
+    width: 285px;
+    height: 141px;
+    left: 1380px;
+    top: 130px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    
+    color: #000000;
+}
+.panel_2_head{
+    position: absolute;
+    width: 330px;
+    height: 108px;
+    left: 1375px;
+    top: 20px;
+    
+    font-family: 'Marmelad';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    
+    color: #000000;
+    
+}
+.panel_2_img{
+    position: absolute;
+    width: 787px;
+    height: 390px;
+    left: 986px;
+}
+.panel_3{
+    position: absolute;
+    width: 285px;
+    height: 141px;
+    left: 684px;
+    top: 550px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    
+    color: #000000;
+}
+.panel_3_head{
+    position: absolute;
+    width: 311px;
+    height: 76px;
+    left: 668px;
+    top: 450px;
+    
+    font-family: 'Marmelad';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    
+    color: #000000;
+}
+.panel_3_img{
+    position: absolute;
+    width: 787px;
+    height: 406.12px;
+    left: 274px;
+    top: 400px;
+}
+.panel_4{
+    position: absolute;
+    width: 285px;
+    height: 141px;
+    left: 1380px;
+    top: 550px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+    
+    color: #000000;
+}
+.panel_4_head{
+    position: absolute;
+    width: 280px;
+    height: 76px;
+    left: 1375px;
+    top: 450px;
+    
+    font-family: 'Marmelad';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
+    text-align: center;
+    
+    color: #000000;
+}
+.panel_4_img{
+    position: absolute;
+    width: 787px;
+    height: 390px;
+    left: 986px;
+    top: 400px;
+}
+.price{
+    position: absolute;
+    width: 364px;
+    height: 48.67px;
+    left: 767px;
+    top: 730px;
+    
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+   
+    
+    text-align: center;
+    
+    color: #FFFFFF;
+
+    background: #811919;
+    border-radius: 79px;
+}
+.providers_list{
+    position: absolute;
+    width: 1920px;
+    height: 170.21px;
+    left: 2px;
+    top: 4100px;
+}
+.provider{
+    position: absolute;
+    width: 248px;
+    height: 49.3px;
+    left: 838px;
+    top: 100px;
+    
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 47px;
+    
+    color: #000000;
+}
+.line_3{
+    position: absolute;
+    width: 1920px;
+    height: 0px;
+    top: 170px;
+    
+    
+    border: 1px solid #A9A9A9;
+    transform: matrix(-1, 0, 0, -1, 0, 0);
+}
+.era{
+    
+    position: absolute;
+    width: 238px;
+    height: 96.07px;
+    left: 644px;
+    top: 200px;
+}
+.es{
+    position: absolute;
+    width: 98px;
+    height: 96.36px;
+    left: 974px;
+    top: 200px;
+}
+.smartbuy{
+    box-sizing: border-box;
+
+    position: absolute;
+    top: 200px;
+    left: 398px;
+    border: 1px solid rgba(0, 0, 0, 0.25);
+}
+.may{
+    position: absolute;
+    width: 129px;
+    height: 81.8px;
+    left: 1172px;
+    top: 200px;
+}
+.profit{
+    box-sizing: border-box;
+
+    position: absolute;
+    left: 1373px;
+    top: 200px;
+    border: 1px solid rgba(0, 0, 0, 0.25);
+}
+.providers_list li{
+    list-style-type:none;
+}
+.footer{
+    position: absolute;
+    width: 1920px;
+    height: 303px;
+    top: 4600px;
+}
+.footer_background{
+    position: absolute;
+    width: 1920px;
+    height: 303px;
+    
+    
+    
+    background: #000000;
+}
+.logo_footer{
+    position: absolute;
+    width: 172.73px;
+    height: 171.07px;
+    left: 200.69px;
+    top: 50px;
 }
