--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,19 @@
     font-family: "Intro Regular";
     src: url(fonts\ofont.ru_Intro.ttf);
 }
+html{
+
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+  body
+  {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+  }
 ul.menu a {
     font-family: 'Oswald';
     font-style: normal;
@@ -64,23 +77,23 @@ li a:hover {
    }
 .head {
     position: absolute;
-    width: 1920px;
+    width: 100%;
     height: 191.92px;
-    left: -2px;
-    top: 0px;
+    left: 0;
+    top: 0;
     max-width: 100%;
     
     background: #000000;   
 }
 .navpage {
     position: absolute;
-width: 1923px;
-height: 33.28px;
-left: -2px;
-top: 78px;
-max-width: 100%;
+    width: 100%;
+    height: 33.28px;
+    left: -2px;
+    top: 78px;
+    max-width: 100%;
 
-background: #811919;
+    background: #811919;
 }
 .logo {
     position: absolute;
