--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
     overflow-x: hidden;
 }
 
-  body
+body
   {
     width: 100%;
     max-width: 100%;
@@ -331,6 +331,68 @@ top: 1114px;
     
     color: #FFFFFF;
 }
+.form-popup {
+    display: none;
+    position: fixed;
+    background: #333232;
+    position: fixed; top: 50%; left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border: 3px solid #f1f1f1;
+    z-index: 100;
+  }
+  
+  /* Добавление стилей в контейнер форм */
+  .form-container {
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
+    z-index: 50;
+  }
+  
+  /* Поля ввода полной ширины */
+  .form-container input[type=text], .form-container input[type=password] {
+    width: 250px;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  /* Когда входы получают фокус, сделайте что-нибудь */
+  .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+  }
+.form-container .btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+  }
+  .form-container .btn:hover, .open-button:hover {
+    opacity: 1;
+  }
+  .form-container .cancel {
+    background-color: red;
+  }
+.popup-fade:before {
+	content: '';
+	background: #000;
+	position: fixed; 
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	opacity: 0.7;
+	z-index: 9999;
+}
+
 .line_1{
     position: absolute;
     width: 1920px;
