--- a/css/style.css
+++ b/css/style.css
@@ -335,12 +335,13 @@ top: 1114px;
     display: none;
     position: fixed;
     background: #333232;
-    position: fixed; top: 50%; left: 50%;
+    position: fixed;
+    top: 50%; left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border: 3px solid #f1f1f1;
-    z-index: 100;
+    z-index: 1000;
   }
   
   /* Добавление стилей в контейнер форм */
@@ -381,18 +382,6 @@ top: 1114px;
   .form-container .cancel {
     background-color: red;
   }
-.popup-fade:before {
-	content: '';
-	background: #000;
-	position: fixed; 
-	left: 0;
-	top: 0;
-	width: 100%; 
-	height: 100%;
-	opacity: 0.7;
-	z-index: 9999;
-}
-
 .line_1{
     position: absolute;
     width: 1920px;
@@ -1436,5 +1425,178 @@ color: #000000;
     
     background: #811919;
     border-radius: 45px;
+}
+
+/*Страница демонстрации
+*/
+
+.intro_header {
+    position: absolute;
+    width: 164.17px;
+    height: 36px;
+    left: 372px;
+    top: 253px;
+}
+.intro_line {
+    position: absolute;
+    width: 3px;
+    height: 256px;
+    left: 410px;
+    top: 353px;
+    
+    background: #111111;
+}
+.intro-text-1 {
+    position: absolute;
+    width: 717px;
+    height: 90px;
+    left: 468px;
+    top: 353px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 19px;
+    line-height: 30px;
+    /* or 158% */
+    
+    display: flex;
+    align-items: center;
+    
+    color: #000000;
+}
+.intro-text-2 {
+    position: absolute;
+    width: 684px;
+    height: 150px;
+    left: 468px;
+    top: 466px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 19px;
+    line-height: 30px;
+    /* or 158% */
+    
+    display: flex;
+    align-items: center;
+    
+    color: #000000;
+
+}
+.demo-photo-header {
+    position: absolute;
+    width: 250.48px;
+    height: 27px;
+    left: 371px;
+    top: 770px;
+}
+.photo-line {
+    position: absolute;
+    width: 100%;
+    height: 0px;
+    top: 806px;
+    
+    border: 1px solid #A9A9A9;
+    transform: matrix(-1, 0, 0, -1, 0, 0);
+}
+.vivid {
+    position: absolute;
+    width: 980px;
+    height: 800px;
+    left: 471px;
+    top: 875px;
+
+    border-radius: 40px;
+}
+.tutorial {
+    position: absolute;
+    width: 100%;
+    height: 768px;
+    left: 0px;
+    top: 1744px;
+    
+    background: #EEEEEE;
+}
+.step_1 {
+    padding-left: 400px;
+    padding-top: 157px;
+}
+.step_1_header {
+    position: absolute;
+    width: 173px;
+    height: 60px;
+    left: 360px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 30px;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    
+    color: #000000;
+}
+.step_2 {
+    position: absolute;
+    bottom: 200px;
+}
+.tutorial h3{
+    position: absolute;
+    width: 400px;
+    height: 30px;
+    left: 850px;
+    top: 130px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 25px;
+    line-height: 30px;
+    
+    display: flex;
+    align-items: center;
+    
+    color: #000000;
+}
+.tutorial h2{
+    position: absolute;    
+    width: 577px;
+    height: 72px;
+    left: 373px;
+    display: flex;
+    align-items: center; 
+}
+.tutorial p{
+    position: absolute;
+    width: 702px;
+    height: 255px;
+    left: 935px;
+    bottom: 307px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 19px;
+    line-height: 30px;
+
+    
+    display: flex;
+    align-items: center;
+    
+    color: #000000;
+}
+.step_2_header {
+}
+.step_3 {
+
+}
+.step_3_header {
+}
+.step_4 {
+}
+.step_4_header {
 }
 
