--- a/css/style.css
+++ b/css/style.css
@@ -1199,7 +1199,14 @@ color: #000000;
 
 
 
+.provider_list{
+    position: absolute;
+    width: 1922px;
+    height: 170.21px;
+    left: 0px;
+    top: 6473px;
 
+}
 .provider{
     position: absolute;
     width: 248px;
@@ -1266,13 +1273,13 @@ color: #000000;
 .providers_list li{
     list-style-type:none;
 }
-.footer{
+.main_footer{
     position: absolute;
-    width: 100%;
     height: 303px;
-    left: 0;
-    top: 5500px;
+    left: 0px;
+    top: 6782px;
 }
+ 
 .footer_background{
     position: absolute;
     width: 1920px;
