--- a/css/style.css
+++ b/css/style.css
@@ -127,26 +127,50 @@ li a:hover {
 .slider{
     position: absolute;
     width: 1920px;
-    height: 737.97px;
+    height: 800px;
     left: 0px;
-    top: 184.03px;
     max-width: 100%;
+}
+.slider2{
+    position: absolute;
+    width: 1920px;
+    height: 800px;
+    left: 0px;
+    max-width: 100%;
+    z-index: 0;
+}
+.slider3{
+    position: absolute;
+    width: 1920px;
+    height: 800px;
+    left: 0px;
+    max-width: 100%;
+}
+.bg_dark{
+    background-color:rgba(0,0,0,.3);
+    height: 800px;
+    position:fixed;
+    width:100%;
+    top:0;
+    left:0;
+    z-index: 1;
 }
 .slider-header{
     position: absolute;
     width: 759px;
     height: 83px;
     left: 337px;
-    top: 419px;
+    top: 350px;
     color: #FFFFFF;
+    z-index: 2;
 }
 .slider-text{
     position: absolute;
     width: 581px;
     height: 229px;
     left: 370px;
-    top: 550px;
-
+    top: 450px;
+    z-index: 2;
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 400;
@@ -213,7 +237,6 @@ li a:hover {
     left: 580px;
     top: 987px;
 
-
     color: #000000;
 }
 .adv{
@@ -223,7 +246,7 @@ li a:hover {
     font-size: 20px;
     line-height: 30px;
     text-align: center;
-
+    list-style-type: none;
     color: #000000;
 }
 .adv_1{
@@ -1046,6 +1069,7 @@ color: #000000;
     height: 170.21px;
     left: 0px;
     margin-bottom: -10px;
+    top: 2000px;
 }
 .profit_1, .profit_2, .profit_3{
     font-family: 'Roboto';
@@ -1688,7 +1712,56 @@ color: #000000;
 
 /*Страница светорасчета
 */
+.content_1, .content_2, .content_3, .content_4 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    
+    display: flex;
+    align-items: center;
+    
+    color: #121212;
+     
+}
+.svet_container p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    text-align: justify;
+    
+    color: #000000;
+    
+}
+.termins_title {
+    font-family: 'Roboto';
+    font-style: bold;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 28px;
+    
+    display: flex;
+    align-items: center;
+    
+    color: #121212;
+}
 
+
+.termins{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 16px;
+    line-height: 25px;
+    color: #121212;
+    height: 456.28px;
+    left: 501px;
+}
+.termins li{
+    width: 800px;
+}
 .svet_title {
     position: absolute;
     width: 164.17px;
